增加了一些混乱的代码

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "xhs": "tsx src/cli/cli.ts",
     "xhs-cli": "tsx src/cli/cli.ts",
     "test": "tsx src/cli/_test.ts",
+    "test:mcp": "tsx src/mcp/test.ts",
     "login": "npm run cli login",
     "check-login": "npm run cli check-login"
   },
