--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postpublish": "git checkout README.md",
     "xhs": "tsx src/cli.ts",
     "mcp": "node dist/mcp/index.js",
+    "setup": "tsx src/scripts/setup_mcp.ts",
     "test": "tsx src/test/_test.ts"
   },
   "keywords": [
@@ -50,7 +51,10 @@
     "jsqr": "^1.4.0",
     "pngjs": "^7.0.0",
     "puppeteer": "^24.29.0",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "react": "^18.2.0",
+    "satori": "^0.1.1",
+    "@resvg/resvg-js": "^2.5.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
