--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xhs-cli",
-  "version": "1.0.3",
-  "description": "面向个人创作者的小红书 CLI 工具和 MCP 服务器 - 帮助创作者管理、分析和发布小红书内容",
+  "version": "1.0.5",
+  "description": "面向个人创作者的小红书 CLI 工具和 MCP 服务器 - 帮助创作者管理、分析和发布小红书内容，支持自动生成封面图片",
   "type": "module",
   "main": "dist/mcp/index.js",
   "types": "dist/index.d.ts",
@@ -14,12 +14,14 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy:fonts",
+    "copy:fonts": "node -e \"const fs=require('fs');const path=require('path');const src=path.join('src','Illustrate','fonts');const dist=path.join('dist','Illustrate','fonts');if(fs.existsSync(src)){if(!fs.existsSync(dist))fs.mkdirSync(dist,{recursive:true});fs.readdirSync(src).forEach(f=>{if(f.endsWith('.ttf'))fs.copyFileSync(path.join(src,f),path.join(dist,f));});}\"",
     "postpublish": "git checkout README.md",
     "xhs": "tsx src/cli.ts",
     "mcp": "node dist/mcp/index.js",
     "setup": "tsx src/scripts/setup_mcp.ts",
-    "test": "tsx src/test/_test.ts"
+    "test": "tsx src/test/_test.ts",
+    "test:cover": "tsx src/test/test_cover_generation.ts"
   },
   "keywords": [
     "mcp",
@@ -31,7 +33,9 @@
     "social-media",
     "automation",
     "cli",
-    "crawler"
+    "crawler",
+    "cover-generation",
+    "image-generation"
   ],
   "author": "Joo <1546635571@qq.com>",
   "license": "MIT",
@@ -48,17 +52,19 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
+    "@resvg/resvg-js": "^2.5.1",
     "jsqr": "^1.4.0",
+    "opentype.js": "^1.3.4",
     "pngjs": "^7.0.0",
-    "puppeteer": "^24.29.0",
+    "puppeteer-core": "^24.29.1",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.2.0",
-    "satori": "^0.1.1",
-    "@resvg/resvg-js": "^2.5.1"
+    "satori": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/qrcode-terminal": "^0.12.2",
+    "@types/react": "^19.2.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
