--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc && npm run copy:fonts",
-    "copy:fonts": "node -e \"const fs=require('fs');const path=require('path');const src=path.join('src','Illustrate','fonts');const dist=path.join('dist','Illustrate','fonts');if(fs.existsSync(src)){if(!fs.existsSync(dist))fs.mkdirSync(dist,{recursive:true});fs.readdirSync(src).forEach(f=>{if(f.endsWith('.ttf'))fs.copyFileSync(path.join(src,f),path.join(dist,f));});}\"",
+    "build": "tsc && npm run copy:assets",
+    "copy:assets": "node -e \"const fs=require('fs');const path=require('path');function copyDir(src,dest){if(!fs.existsSync(dest))fs.mkdirSync(dest,{recursive:true});const entries=fs.readdirSync(src,{withFileTypes:true});for(const entry of entries){const srcPath=path.join(src,entry.name);const destPath=path.join(dest,entry.name);if(entry.isDirectory()){copyDir(srcPath,destPath);}else{fs.copyFileSync(srcPath,destPath);}}}copyDir('src/prompts','dist/prompts');copyDir('src/templates','dist/templates');\"",
     "postpublish": "git checkout README.md",
     "xhs": "tsx src/cli.ts",
     "mcp": "node dist/mcp/index.js",
     "setup": "tsx src/scripts/setup_mcp.ts",
+    "preview": "tsx src/scripts/preview_templates.ts",
     "test": "tsx src/test/_test.ts",
     "test:cover": "tsx src/test/test_cover_generation.ts"
   },
@@ -53,7 +54,11 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
     "@resvg/resvg-js": "^2.5.1",
+    "@types/html2canvas": "^0.5.35",
+    "express": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "jsqr": "^1.4.0",
+    "open": "^10.2.0",
     "opentype.js": "^1.3.4",
     "pngjs": "^7.0.0",
     "puppeteer-core": "^24.29.1",
@@ -62,7 +67,9 @@
     "satori": "^0.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
+    "@types/express": "^5.0.5",
+    "@types/node": "^20.19.24",
+    "@types/open": "^6.1.0",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/react": "^19.2.2",
     "tsx": "^4.7.0",
